My first commit

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     	</div>
 		<div class="row centered">
 			<div class="col-lg-8 col-lg-offset-2 w">
-				<h1>Coming Soon</h1>
+				<h1>Not Coming Soon</h1>
 			</div>
 		</div>
     </div>
